adjust folder location

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
@@ -1,8 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
-    <title>登录</title>
+﻿    <title>登录</title>
     <link rel="stylesheet" type="text/css" href="~/resource/Css/mail.css" />
     <link rel="stylesheet" type="text/css" href="~/resource/css/common.css" />
     <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery-1.10.2.min.js")"></script>
@@ -24,11 +20,11 @@
             document.forms[0].submit();
         }
     </script>
-</head>
-<body>
+
+
    
         <div class="mian">
-            <div class="banner">2012行政秘书PPT制作大赛</div>
+            <div class="banner">导出报表</div>
             <div class="center">
                 <div class="denglu">
                     <ul>
@@ -43,5 +39,5 @@
         </div>
 
   
-</body>
-</html>
+
+
