adding button to export table to csv

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Resource/Css/Site.css
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Resource/Css/Site.css
@@ -23,4 +23,18 @@ textarea {
     max-width: 280px;
 }
 
+#ExportToCsv {
+     BORDER-RIGHT: #7b9ebd 1px solid; 
+    PADDING-RIGHT: 2px; 
+    BORDER-TOP: #7b9ebd 1px solid; 
+    PADDING-LEFT: 2px; 
+    FONT-SIZE: 12px; 
+    FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#ffffff, EndColorStr=#cecfde); 
+    BORDER-LEFT: #7b9ebd 1px solid; 
+    CURSOR: hand; COLOR: black; 
+    PADDING-TOP: 2px; 
+    BORDER-BOTTOM: #7b9ebd 1px solid;
+
+
+}
 
