complete the functionalities regarding how to export datatable to excel separately

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
@@ -8,13 +8,16 @@
 <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/template.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery.twbsPagination.min.js")"></script>
 <div class="jumbotron">
-   test
+   导出报表
 </div>
 <script language="javascript">
     $(document).ready(function() {
         SearchSqlToPage(1);
+      
         //SearchSqlToExcel(1);
     });
+
+  
 
 
     function SearchSqlToPage(pageIndex) {
@@ -74,7 +77,7 @@
     });
     }
 
-    function SearchSqlToExcel(pageIndex) {
+    function SearchSqlToCsv(pageIndex) {
         var parameters = {
             sqlstatement: "select * from batisTable",
             ProviderName: "SQL",
@@ -115,9 +118,53 @@
     });
     }
 
+      function SearchSqlToExcel(pageIndex) {
+        var parameters = {
+            sqlTableName: "batisTable",
+            ProviderName: "SQL",
+            ServerName: "SHCYF59T",
+            UserName: "sa",
+            UserPwd: "newHard!@@#$",
+            DataBase: "CentalineTest",
+            ConString: "",
+            DBProvider: "",
+            ValidateType: "SQL Server身份验证",
+            pageIndex: pageIndex,
+            pageSize: 10,
+            fileName: "d:\\a.xls"
+        };
+
+        $.ajax({
+            type: "post",
+            url: "@Url.Content("~/SqlExportService/ExportToExcel")",
+        dataType: "json",
+        global: false,
+        data: parameters,
+        async: false,
+        beforeSend: function(xml) {},
+        success: function (data) {
+            if (data.Code > 0) {
+                alert(data.Message);
+                return;
+            }
+            if (data.Code == 0) {
+                alert("分页导出CSV不成功!");
+                return;
+            }
+         },
+        error: function(event, XMLHttpRequest, ajaxOptions, thrownError) {
+            alert(XMLHttpRequest);
+        },
+        complete: function(xml, ts) { }
+    });
+    }
+
 
 </script>
 <div id="SearchSouFunAgentDiv"></div>
 <div id="SearchSouFunAgentPageDiv"></div>
-<div class="ExportToCsv" onclick="SearchSqlToExcel(1)">导出到csv</div>
-<div class="ExportToCsv" onclick="">导出到excel</div>
+<div class="ExportToCsv" onclick="SearchSqlToCsv(1)">导出到csv</div>
+@*<div id="tableName" class="tableName">选择导出表：<select ></select>
+</div>
+<div  id="rowNumber" class="rowNumber">行数设置：<select></select></div>*@
+<div class="ExportToExcel" onclick="SearchSqlToExcel(1)">导出到excel</div>
