rename and remove unnecessary execution statement

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
@@ -64,8 +64,8 @@
                 }
             });
         },
-        error: function(event, XMLHttpRequest, ajaxOptions, thrownError) {
-            alert(XMLHttpRequest);
+        error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
+            alert(xmlHttpRequest);
         },
         complete: function(xml, ts) { }
     });
@@ -105,8 +105,8 @@
                 return;
             }
          },
-        error: function(event, XMLHttpRequest, ajaxOptions, thrownError) {
-            alert(XMLHttpRequest);
+        error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
+            alert(xmlHttpRequest);
         },
         complete: function(xml, ts) { }
     });
@@ -146,8 +146,8 @@
                 return;
             }
          },
-        error: function(event, XMLHttpRequest, ajaxOptions, thrownError) {
-            alert(XMLHttpRequest);
+        error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
+            alert(xmlHttpRequest);
         },
         complete: function(xml, ts) { }
     });
