--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
@@ -43,9 +43,9 @@
 
 
             },
-            error: function (event, XMLHttpRequest, ajaxOptions, thrownError) {
+            error: function (event, xmlHttpRequest, ajaxOptions, thrownError) {
                
-                alert(XMLHttpRequest);
+                alert(xmlHttpRequest);
             },
             complete: function(xml, ts) { }
         });
