separate the sql parameter from httprequest

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Resource/Css/Site.css
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Resource/Css/Site.css
@@ -58,7 +58,7 @@ textarea {
 .ExportToExcel {
     position: relative;
     float: left;
-    left: 300px;
+    left:550px;
     width: 80px;
   
     BORDER-RIGHT: #7b9ebd 1px solid; 
@@ -68,10 +68,29 @@ textarea {
     FONT-SIZE: 12px; 
     FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#ffffff, EndColorStr=#cecfde); 
     BORDER-LEFT: #7b9ebd 1px solid; 
-    CURSOR: hand; COLOR: black; 
+    CURSOR: pointer; COLOR: black; 
     PADDING-TOP: 2px; 
     BORDER-BOTTOM: #7b9ebd 1px solid;
-   
+    
+}
+
+.browser {
+    position: relative;
+    float: left;
+    left:500px;
+    width: 80px;
+  
+    BORDER-RIGHT: #7b9ebd 1px solid; 
+    PADDING-RIGHT: 2px; 
+    BORDER-TOP: #7b9ebd 1px solid; 
+    PADDING-LEFT: 2px; 
+    FONT-SIZE: 12px; 
+    FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#ffffff, EndColorStr=#cecfde); 
+    BORDER-LEFT: #7b9ebd 1px solid; 
+    CURSOR: pointer; COLOR: black; 
+    PADDING-TOP: 2px; 
+    BORDER-BOTTOM: #7b9ebd 1px solid;
+    
 }
 
 
