--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Login/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿    <title>登录</title>
     <link rel="stylesheet" type="text/css" href="~/resource/Css/mail.css" />
-    <link rel="stylesheet" type="text/css" href="~/resource/css/common.css" />
-    <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery-1.10.2.min.js")"></script>
+<link rel="stylesheet" type="text/css" href="~/resource/css/common.css"/>
+<LINK REL=STYLESHEET TYPE="text/css" HREF="../../Resource/Css/Site.css">
+<LINK REL=STYLESHEET TYPE="text/css" HREF="../../Resource/Css/main.css">
+<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery-1.10.2.min.js")"></script>
+
+<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/template.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery.twbsPagination.min.js")"></script>
     <script>
         function isEmpty(str){
             return (str.replace(/(\s*)/g,'').length<1);
