using Linq to XML to store configure for current datatime used to be void click repeatly\

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
@@ -14,9 +14,6 @@
 
     $(document).ready(function() {
         //SearchSqlToPage(1);
-
-
-
         var parameters = {};
         $.ajax({
             type: "post",
@@ -42,8 +39,6 @@
                 alert(xmlHttpRequest);
             },
             complete: function(xml, ts) {
-
-
             }
         });
     });
@@ -186,10 +181,10 @@
         });*@
     }
 
-    function showRealPath(filePath) {
-     $("#uploadfileRealPath")[0].value = filePath;
-      alert(filePath);
-    }
+    //function showRealPath(filePath) {
+    // $("#uploadfileRealPath")[0].value = filePath;
+    //  alert(filePath);
+    //}
 
     //function ok() {
 
