--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Views/Home/Index.cshtml
@@ -4,9 +4,11 @@
 @Html.Partial("SearchSqlResultTemplate")
 <LINK REL=STYLESHEET TYPE="text/css" HREF="../../Resource/Css/Site.css">
 <LINK REL=STYLESHEET TYPE="text/css" HREF="../../Resource/Css/main.css">
-<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery-1.10.2.min.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery-1.8.3.min.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/template.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery.twbsPagination.min.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Resource/Scripts/jquery.unobtrusive-ajax.js")"></script>
+
 <div class="jumbotron">
    导出报表
 </div>
@@ -41,106 +43,14 @@
             complete: function(xml, ts) {
             }
         });
+
+      
     });
 
-
-    @*function SearchSqlToPage(pageIndex) {
-        var parameters = {
-            sqltable: "batisTable",
-            ProviderName: "SQL",
-            ServerName: "SHCYF59T",
-            UserName: "sa",
-            UserPwd: "newHard!@@#$",
-            DataBase: "CentalineTest",
-            ConString: "",
-            DBProvider: "",
-            ValidateType: "SQL Server身份验证",
-            pageIndex: pageIndex,
-            pageSize: 10,
-            fileName: "d:\\a.xls"
-        };
-
-        $.ajax({
-            type: "post",
-            url: "@Url.Content("~/SqlExportService/QueryPage")",
-        dataType: "json",
-        global: false,
-        data: parameters,
-        async: false,
-        beforeSend: function(xml) {},
-        success: function(data) {
-            if (data.Code < 0) {
-                alert(data.Message);
-                return;
-            }
-            if (data.Code == 1) {
-                alert("未找到相关的数据!");
-                return;
-            }
-            data.list = data.Data;
-            var html = template("SearchSqlResultTemplate", data);
-            $("#SearchSouFunAgentDiv").html(html);
-            $("#SearchSouFunAgentPageDiv").twbsPagination({
-                totalPages: data.PageInfo.PageCount,
-                visiblePages: 10,
-                startPage: pageIndex,
-                first: '首页',
-                prev: '上一页',
-                next: '下一页',
-                last: '尾页',
-                onPageClick: function(event, page) {
-                    SearchSqlToPage(page);
-                }
-            });
-        },
-        error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
-            alert(xmlHttpRequest);
-        },
-        complete: function(xml, ts) { }
-    });
+    function refresh(e) {
+      alert("test"); 
     }
-
-    function SearchSqlToCsv(pageIndex) {
-        var parameters = {
-            sqlstatement: "select * from batisTable",
-            ProviderName: "SQL",
-            ServerName: "SHCYF59T",
-            UserName: "sa",
-            UserPwd: "newHard!@@#$",
-            DataBase: "CentalineTest",
-            ConString: "",
-            DBProvider: "",
-            ValidateType: "SQL Server身份验证",
-            pageIndex: pageIndex,
-            pageSize: 10,
-            fileName: "d:\\a.xls"
-        };
-
-        $.ajax({
-            type: "post",
-            url: "@Url.Content("~/SqlExportService/ExportToCsv")",
-        dataType: "json",
-        global: false,
-        data: parameters,
-        async: false,
-        beforeSend: function(xml) {},
-        success: function (data) {
-            if (data.Code > 0) {
-                alert(data.Message);
-                return;
-            }
-            if (data.Code == 0) {
-                alert("分页导出CSV不成功!");
-                return;
-            }
-         },
-        error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
-            alert(xmlHttpRequest);
-        },
-        complete: function(xml, ts) { }
-    });
-    }*@
-
+  
     function SearchSqlToExcel() {
 
 
@@ -150,54 +60,21 @@
         };
         $.ajax({
             type: "POST",
-            url:"@Url.Content("~/SqlExportService/DownLoadExcel")",
+            url: "@Url.Content("~/SqlExportService/DownLoadExcel")",
             contentType: "application/json",
             data: JSON.stringify(parameters)
         });
-        @*$.ajax({
-            type: "post",
-            url: "@Url.Content("~/SqlExportService/DownLoadExcel")",
-            dataType: "json",
-            global: false,
-            data: parameters,
-            async: false,
-            beforeSend: function(xml) {},
-            success: function (data) {
-
-                //alert(data);
-                //if (data.Code > 0) {
-                //    alert(data.Message);
-                //    return;
-                //}
-                //if (data.Code == 0) {
-                //    alert("导出excel不成功!");
-                //    return;
-                //}
-            },
-            error: function(event, xmlHttpRequest, ajaxOptions, thrownError) {
-                alert(xmlHttpRequest);
-            },
-            complete: function(xml, ts) { }
-        });*@
+     
     }
 
-    //function showRealPath(filePath) {
-    // $("#uploadfileRealPath")[0].value = filePath;
-    //  alert(filePath);
-    //}
-
-    //function ok() {
-
-    //    var s = document.getElementById("file");
-    //    s.click();
-    //    var file_upl = document.getElementById('file');
-    //    file_upl.select();
-    //    var realpath = document.selection.createRange().text;
-    //    alert(realpath);
-    //}
 </script>
 @*<div id="SearchSouFunAgentDiv"></div>
 <div id="SearchSouFunAgentPageDiv"></div>
 <div class="ExportToCsv" onclick="SearchSqlToCsv(1)">导出到csv</div>*@
-<div id="Export">@*<div id="ExportToExcel" class="ExportToExcel" onclick="SearchSqlToExcel()">导出到excel</div>*@@Html.ActionLink("点击导出Excel", "DownLoadExcel", "SqlExportService")</div>
+@using (Ajax.BeginForm("DownLoadExcel", "SqlExportService", new AjaxOptions()))
+{
+    <input type = "submit" value = "导出excel" />
+}
+@*<div id="Export">@Html.ActionLink("点击导出Excel", "DownLoadExcel", "SqlExportService")</div>*@
+@*<div id="SendMail">@Html.ActionLink("发送邮件", "SendMail", "SqlExportService")</div>*@
 @*<div id="Export">导出的文件地址:<input type="file" id="file" name="file" readonly="true"><input type="button" value="click" onclick="ok()">  <div id="ExportToExcel" class="ExportToExcel" onclick="SearchSqlToExcel()">导出到excel</div></div>*@
